--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,32 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
 footer {
   background: linear-gradient(135deg, #2C3E50, #1a70c7);
+}
+
+.colorLetraCorp {
+  color: #518cc7 !important;
+}
+
+.colorLetraCorp2 {
+  color: #1a70c7 !important;
+}
+
+.colorLetraCorp3{
+  color: #425e88 !important;
+}
+
+.ulRows {
+  list-style-type: " → ";
+}
+
+.ulRows li::marker {
+  font-size: 25px; /* Cambia el tamaño del marcador de la lista */
+}
+
+.bordeCorporativo {
+  border: #1a70c7 solid;
 }
 
 .colorCorporativo {
@@ -71,7 +94,7 @@ footer {
 .custom-text-center {
   text-align: center;
   font-weight: bold;
-  color: #007bff;
+  color: #1a70c7;
 }
 
 .navbar {
@@ -141,7 +164,6 @@ footer {
 }
 .header-custom img {
   border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .elementHovBackBlack:hover {
@@ -777,7 +799,7 @@ progress {
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
-  border: 1px solid var(--bs-border-color);
+  border: 1px solid var(#1a70c7);
   border-radius: 0.375rem;
   max-width: 100%;
   height: auto;
